--- a/details.html
+++ b/details.html
@@ -153,38 +153,67 @@
       });
     </script>
 
-    <div class="sidebar flex flex-col gap-2">
-      <a href="#" class="inline-flex items-center justify-center w-9 h-6 rounded-[30px] border mt-[20px]"
-        style="background-color: #051d39; color: white; border: 1px solid #051d39;">
-        🇦🇿
-      </a>
-      <a href="#" class="inline-flex items-center justify-center w-9 h-6 rounded-[30px]"
-        style="background-color: white; color: #051d39; border: 2px solid #051d39;">
-        🇷🇺
-      </a>
+<div class="sidebar flex flex-col justify-between h-full py-4">
+  
+  <div class="flex flex-col gap-2">
+    <a href="#" class="inline-flex items-center justify-center w-9 h-6 rounded-[30px] border mt-[20px]"
+      style="background-color: #051d39; color: white; border: 1px solid #051d39;">
+      🇦🇿
+    </a>
+    <a href="#" class="inline-flex items-center justify-center w-9 h-6 rounded-[30px]"
+      style="background-color: white; color: #051d39; border: 2px solid #051d39;">
+      🇷🇺
+    </a>
+    <a href="#" class="inline-flex items-center justify-center w-9 h-6 rounded-[30px]"
+      style="background-color: white; color: #051d39; border: 2px solid #051d39;">
+      🇹🇷
+    </a>
+    <a href="#" class="inline-flex items-center justify-center w-9 h-6 rounded-[30px]"
+      style="background-color: white;">
+      <svg xmlns="http://www.w3.org/2000/svg" style="width: 36px; height: 24px; color: #051d39;" fill="none"
+        viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+          d="M13 16h-1v-4h-1m1-4h.01M12 2a10 10 0 100 20 10 10 0 000-20z" />
+      </svg>
+    </a>
+    <a href="#" class="inline-flex items-center justify-center w-9 h-6 rounded-[30px]"
+      style="background-color: white; border: 2px solid #051d39;">
+      <svg xmlns="http://www.w3.org/2000/svg" style="width: 20px; height: 20px; color: #051d39;" fill="none"
+        viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+          d="M21 12.79A9 9 0 1111.21 3a7 7 0 109.79 9.79z" />
+      </svg>
+    </a>
+  </div>
 
-      <a href="#" class="inline-flex items-center justify-center w-9 h-6 rounded-[30px]"
-        style="background-color: white; color: #051d39; border: 2px solid #051d39;">
-        🇹🇷
-      </a>
+  <div class="flex flex-col gap-2 mb-4">
+    <a href="#" class="inline-flex items-center justify-center w-6 h-6 rounded-full"
+      style="background-color: #3b5998; color: white;">
+      <i class="fab fa-facebook-f text-xs"></i>
+    </a>
+    <a href="#" class="inline-flex items-center justify-center w-6 h-6 rounded-full"
+      style="background-color: #E4405F; color: white;">
+      <i class="fab fa-instagram text-xs"></i>
+    </a>
+    <a href="#" class="inline-flex items-center justify-center w-6 h-6 rounded-full"
+      style="background-color: #1DA1F2; color: white;">
+      <i class="fab fa-twitter text-xs"></i>
+    </a>
+    <a href="#" class="inline-flex items-center justify-center w-6 h-6 rounded-full"
+      style="background-color: #25D366; color: white;">
+      <i class="fab fa-whatsapp text-xs"></i>
+    </a>
+    <a href="#" class="inline-flex items-center justify-center w-6 h-6 rounded-full"
+      style="background-color: #0088cc; color: white;">
+      <i class="fab fa-telegram-plane text-xs"></i>
+    </a>
+    <a href="#" class="inline-flex items-center justify-center w-6 h-6 rounded-full"
+      style="background-color: #34A853; color: white;">
+      <i class="fab fa-google-play text-xs"></i>
+    </a>
+  </div>
+</div>
 
-      <a href="#" class="inline-flex items-center justify-center w-9 h-6 rounded-[30px]"
-        style="background-color: white;">
-        <svg xmlns="http://www.w3.org/2000/svg" style="width: 36px; height: 24px; color: #051d39;" fill="none"
-          viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-            d="M13 16h-1v-4h-1m1-4h.01M12 2a10 10 0 100 20 10 10 0 000-20z" />
-        </svg>
-      </a>
-      <a href="#" class="inline-flex items-center justify-center w-6 h-6 rounded-[30px] mb-6"
-        style="background-color: white; border: 2px solid #051d39;">
-        <svg xmlns="http://www.w3.org/2000/svg" style="width: 20px; height: 20px; color: #051d39;" fill="none"
-          viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-            d="M21 12.79A9 9 0 1111.21 3a7 7 0 109.79 9.79z" />
-        </svg>
-      </a>
-    </div>
   </header>
   <div class="bg-white text-[#051d39]">
     <div class="max-w-[75%] mx-auto px-4" id="news-detail-container"></div>
