--- a/slide.html
+++ b/slide.html
@@ -10,11 +10,17 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 </head>
 <body>
-    <div class="swiper">
-        <div class="swiper-wrapper" id="news-wrapper">
-          <!-- JavaScript ilə dolacaq -->
-        </div>
-      </div>
+  <div class="swiper">
+    <div class="swiper-wrapper" id="news-wrapper">
+    </div>
+
+    <div class="slide-controls">
+      <button class="custom-prev"><i class="fa-solid fa-chevron-left"></i></button>
+      <div class="custom-pagination swiper-pagination"></div>
+      <button class="custom-next"><i class="fa-solid fa-chevron-right"></i></button>
+    </div>
+  </div>
+  
       <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
       <script src="js/slide.js" type="module"></script>
 </body>
