--- a/details.html
+++ b/details.html
@@ -303,7 +303,7 @@
   <div class=" news-wrapper max-w-[75%] mx-auto px-4">
     <div id="news-detail-container"></div>
     <div class="pt-[100px]">
-      <h5 class="text-[26px] font-semibold tracking-tight text-[#1894a0] text-left pb-[50px] tracking-wide">
+      <h5 class="text-[26px] font-semibold tracking-tight text-[#1894a0] text-left pb-[50px] tracking-wide  responsive-heading">
         Digər xəbərlər
       </h5>
       <div id="main-news-container"
