--- a/details.html
+++ b/details.html
@@ -311,6 +311,57 @@
       </div>
     </div>
   </div>
+  <footer class="bg-[#eff1f0] text-gray-800 px-14 py-[42px]">
+    <div class="footer-wrapper max-w-[90%] mx-auto grid grid-cols-1 md:grid-cols-3 gap-8 items-start text-[#191c1c]">
+      <div class="w-[280px] max-w-[280px] mx-auto">
+        <img class="w-full h-auto max-w-none" src="img/gmg-logo-az.svg" alt="Oxu.az Logo" />
+      </div>
+      <div class="ml-[50px]">
+        <p class="text-[15px] mb-4">
+          Bütün hüquqlar qorunur © 2013-2025
+        </p>
+        <p class="text-[15px] mb-4">
+          Oxu.Az 24 saat ərzində, Azərbaycan, türk və rus dillərində, ölkədə və dünyada baş verən
+             ən aktual və maraqlı hadisələr barədə operativ xəbərlər, oxucuları və cəmiyyəti 
+             maraqlandıran suallara cavablar, analitik məqalələr, foto və videohesabatlar hazırlayır.
+        </p>
+        <div class="flex flex-wrap justify-evenly gap-2 mt-2">
+          <a href="#" class="inline-flex items-center justify-center w-6 h-6 rounded-full" style="background-color: #3b5998; color: white;">
+            <i class="fab fa-facebook-f text-xs"></i>
+          </a>
+          <a href="#" class="inline-flex items-center justify-center w-6 h-6 rounded-full" style="background-color: #E4405F; color: white;">
+            <i class="fab fa-instagram text-xs"></i>
+          </a>
+          <a href="#" class="inline-flex items-center justify-center w-6 h-6 rounded-full" style="background-color: #1DA1F2; color: white;">
+            <i class="fab fa-twitter text-xs"></i>
+          </a>
+          <a href="#" class="inline-flex items-center justify-center w-6 h-6 rounded-full" style="background-color: #25D366; color: white;">
+            <i class="fab fa-whatsapp text-xs"></i>
+          </a>
+          <a href="#" class="inline-flex items-center justify-center w-6 h-6 rounded-full" style="background-color: #0088cc; color: white;">
+            <i class="fab fa-telegram-plane text-xs"></i>
+          </a>
+          <a href="#" class="inline-flex items-center justify-center w-6 h-6 rounded-full" style="background-color: #34A853; color: white;">
+            <i class="fab fa-google-play text-xs"></i>
+          </a>
+        </div>
+      </div>
+      <div class="flex flex-col md:flex-row setir gap-8">
+        <div class="text-[16px]">
+          <p>Karyera</p>
+          <a href="mailto:cv@oxu.az" class="text-[#3f4848] underline">cv@oxu.az</a>
+          <p>Ümumi sorğular üçün</p>
+          <a href="mailto:editor@oxu.az" class="text-[#3f4848] underline">editor@oxu.az</a>
+          <a href="tel:+994552247686" class="text-[#3f4848] underline">055 224 76 86</a>
+        </div>
+        <div class="text-[16px] underline text-[#3f4848]">
+          <a href="#" class="block mb-[10px]">Saytda reklam</a>
+          <a href="#" class="block mb-[10px]">Bizimlə əlaqə</a>
+          <a href="#" class="block mb-[10px]">Məxfilik siyasəti</a>
+        </div>
+      </div>
+    </div>
+  </footer>
   <script src="js/details.js" type="module"></script>
 </body>
 
